--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ant-design-vue": "^1.6.5",
     "axios": "^0.20.0",
+    "clipboard-polyfill": "^3.0.1",
     "core-js": "^3.6.5",
     "nprogress": "^0.2.0",
     "qs": "^6.9.4",
