--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "os2020",
   "version": "0.1.0",
-  "private": true,
+  "description": "OS2020 ZBlogPHP VUE主题模板",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
