--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "fix": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
-    "ant-design-vue": "^1.6.5",
+    "ant-design-vue": "^1.7.2",
+    "async-validator": "^3.5.1",
     "axios": "^0.20.0",
     "clipboard-polyfill": "^3.0.1",
-    "core-js": "^3.6.5",
+    "core-js": "^3.8.0",
     "nprogress": "^0.2.0",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -28,10 +29,10 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
-    "sass": "^1.26.5",
+    "sass": "^1.30.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
